# C-Breakout

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: context.c.5940420CCD45AE27.idx  egl_context.c.2E3C115726CF8F21.idx  game.c.930F158206800241.idx  game.h.6F86314A0B7AF7B6.idx  game_level.c.B220DB43427644A7.idx  game_level.h.8C8AA5891F93A962.idx  game_object.c.76A1ECAEAD1D04BB.idx  game_object.h.C7AE99F203014446.idx  glad.c.472FE7B2989C97E1.idx  glad.h.7CBD2341D3D93E17.idx  glfw3.h.1405D6A608477992.idx  glfw3native.h.E4693A15B8448F62.idx  glx_context.c.59E8F411D76BAFE7.idx  init.c.8C5D50E9FD09B85B.idx  input.c.51346BE9F2560FFE.idx  internal.h.0309B61BFFE4C342.idx  khrplatform.h.7D3E38E9AA30B066.idx  linmath.h.5F0E9CA672573960.idx  linux_joystick.c.1F2351137686C611.idx  linux_joystick.h.496882E9F389B894.idx  main.c.672CA554BE5F8402.idx  mappings.h.DC48AB6689450228.idx  monitor.c.E4871E87209AD51A.idx  null_init.c.0B49EBED1D9CB9A9.idx  null_joystick.c.54CE2BBEA455C977.idx  null_joystick.h.BA4BDB91FD2C501E.idx  null_monitor.c.E276F73B03F9BED8.idx  (+38 more)
lib/glad/src/: glad.c
res/shader/: fb.frag  fb.vert  particle.frag  particle.vert  sprite.frag  sprite.vert  text.frag  text.vert
src/: game.c  game.h  game_level.c  game_level.h  game_object.c  game_object.h  main.c  particle.c  particle.h  platform.c  platform.h  post_processor.c  post_processor.h  powerup.c  powerup.h  resource_manager.c  resource_manager.h  shader.c  shader.h  sprite_renderer.c  sprite_renderer.h  text_renderer.c  text_renderer.h  texture.c  texture.h  util.h
(+1 files in other folders)
